--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ export(convertDataFrameListsToVectors)
 export(convertListOfVectorsDataFrameToDataFrame)
 export(convertListOfVectorsToDataFrame)
 export(convertToDataFrameWithListOfVectors)
+export(inverseListOfVectors)
 export(searchListOfVectors)
